test/02-traffic-split-1000-0-output.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-rollout
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews-v1
      weight: 100
    - destination:
        host: reviews-v2
      weight: 0
