test/04-traffic-split-1000-500-output.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-rollout
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews-v1
      weight: 67
    - destination:
        host: reviews-v2
      weight: 33
